Mejoras de iconos y renombramiento de archivos
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/layout/ad_fragment_offline.xml
+++ b/app/src/main/res/layout/ad_fragment_offline.xml
@@ -9,7 +9,7 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:contentDescription="@string/icon_ad_app"
-        android:src="@drawable/ic_quakes_24dp"
+        android:src="@drawable/quakes_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
