--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,8 +19,8 @@
     <color name="green_dark">#008e4d</color>
 
     <color name="changeLogIconRelease">#CD03A9F4</color>
-
     <color name="badgeGreen">#9A8BC34A</color>
+    <color name="ad_color">#FFCC66</color>
 
     <!-- Colores para cada magnitud-->
     <color name="magnitude1">#006400</color>
