--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -28,7 +28,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:rippleColor="@color/colorPrimaryVariant"
-        app:srcCompat="@drawable/ic_round_share_24"
+        app:srcCompat="@drawable/round_share_24"
         app:tint="@color/white" />
 
     <include
