--- a/app/src/main/res/layout/card_view_quake.xml
+++ b/app/src/main/res/layout/card_view_quake.xml
@@ -16,10 +16,10 @@
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:contentDescription="@string/circulo_pintado"
+        android:contentDescription="@string/painted_circle"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent"
-        card_view:srcCompat="@drawable/circle_shape" />
+        card_view:srcCompat="@drawable/background_magnitude_circle_shape" />
 
     <TextView
         android:id="@+id/tv_city"
@@ -82,14 +82,14 @@
         android:layout_height="0dp"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="8dp"
-        android:contentDescription="@string/icono_sensible"
+        android:contentDescription="@string/sensitive_icon"
         android:visibility="invisible"
         card_view:layout_constraintBottom_toBottomOf="@+id/tv_city"
         card_view:layout_constraintEnd_toStartOf="@+id/tv_hour"
         card_view:layout_constraintHorizontal_bias="0.0"
         card_view:layout_constraintStart_toEndOf="@+id/tv_city"
         card_view:layout_constraintTop_toTopOf="@+id/tv_city"
-        card_view:srcCompat="@drawable/ic_round_warning_24"
+        card_view:srcCompat="@drawable/round_warning_24"
         tools:visibility="visible" />
 
     <View
