--- a/app/src/main/res/layout/changelog_dialog.xml
+++ b/app/src/main/res/layout/changelog_dialog.xml
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@drawable/round_badge"
+        android:background="@drawable/background_news_round_badge"
         android:paddingStart="8dp"
         android:paddingTop="2dp"
         android:paddingEnd="8dp"
@@ -92,6 +92,6 @@
         app:layout_constraintStart_toEndOf="@+id/tv_title"
         app:layout_constraintTop_toTopOf="@+id/tv_title"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_round_new_releases_24" />
+        app:srcCompat="@drawable/round_new_releases_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
