Se reemplaza antiguo icono verificado por el nuevo y se adiciona en fragment list de sismos
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/drawable/background_verified_quake.xml
+++ b/app/src/main/res/drawable/background_verified_quake.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <!-- drawable/circle_card_icon.xml -->
+
+    <item
+        android:width="14dp"
+        android:height="14dp"
+        android:gravity="center">
         <shape android:shape="oval">
-            <stroke
-                android:width="2dp"
-                android:color="@color/green_dark" />
             <solid android:color="@color/white" />
         </shape>
     </item>
-    <item android:drawable="@drawable/ic_round_check_circle_24" />
+    <item android:drawable="@drawable/round_verified_24" />
 </layer-list>
