--- a/app/src/main/res/layout/card_view_quake.xml
+++ b/app/src/main/res/layout/card_view_quake.xml
@@ -104,4 +104,17 @@
         card_view:layout_constraintStart_toStartOf="@+id/tv_reference"
         card_view:layout_constraintTop_toBottomOf="@+id/iv_mag_color" />
 
+    <ImageView
+        android:id="@+id/iv_verified"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:contentDescription="@string/verified_quake_icon"
+        android:translationX="-5dp"
+        android:translationY="5dp"
+        card_view:layout_constraintBottom_toTopOf="@+id/iv_mag_color"
+        card_view:layout_constraintEnd_toEndOf="@+id/iv_mag_color"
+        card_view:layout_constraintStart_toEndOf="@+id/iv_mag_color"
+        card_view:layout_constraintTop_toTopOf="@+id/iv_mag_color"
+        card_view:srcCompat="@drawable/background_verified_quake" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
