--- a/app/src/main/res/layout/info_windows.xml
+++ b/app/src/main/res/layout/info_windows.xml
@@ -83,8 +83,7 @@
         card_view:layout_constraintEnd_toStartOf="@+id/tv_iw_is_verified"
         card_view:layout_constraintHorizontal_chainStyle="packed"
         card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="@+id/tv_iw_is_verified"
-        card_view:srcCompat="@drawable/ic_round_check_circle_24" />
+        card_view:layout_constraintTop_toTopOf="@+id/tv_iw_is_verified" />
 
     <TextView
         android:id="@+id/tv_iw_is_verified"
