--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="green_dark">#008e4d</color>
 
     <color name="changeLogIconRelease">#CD03A9F4</color>
+    <color name="verified">#03A9F4</color>
     <color name="badgeGreen">#9A8BC34A</color>
     <color name="ad_color">#FFCC66</color>
 
