--- a/app/src/main/res/layout/card_view_quake_bottom_sheet.xml
+++ b/app/src/main/res/layout/card_view_quake_bottom_sheet.xml
@@ -6,9 +6,12 @@
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
     android:clickable="true"
-    android:elevation="0dp"
     android:focusable="true"
-    android:foreground="?attr/selectableItemBackground">
+    android:foreground="?attr/selectableItemBackgroundBorderless"
+    android:paddingStart="16dp"
+    android:paddingTop="8dp"
+    android:paddingEnd="16dp"
+    android:paddingBottom="8dp">
 
     <ImageView
         android:id="@+id/iv_mag_color"
@@ -106,6 +109,6 @@
         android:contentDescription="Hour icon"
         card_view:layout_constraintStart_toStartOf="@+id/tv_city"
         card_view:layout_constraintTop_toBottomOf="@+id/tv_city"
-        card_view:srcCompat="@drawable/round_calendar_today_24" />
+        card_view:srcCompat="@drawable/round_access_time_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
