--- a/app/src/main/res/layout/quake_bottom_sheet.xml
+++ b/app/src/main/res/layout/quake_bottom_sheet.xml
@@ -8,7 +8,6 @@
         android:id="@+id/cv_bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:behavior_peekHeight="100dp"
         app:cardBackgroundColor="@color/colorSurface"
         app:cardElevation="16dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
@@ -33,28 +32,27 @@
                 layout="@layout/card_view_quake_bottom_sheet"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/swipe_line"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/swipe_line" />
 
-            <ImageButton
-                android:id="@+id/imageButton"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_open_details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="32dp"
+                android:contentDescription="@string/cd_details_icon"
+                android:text="@string/details"
+                app:icon="@drawable/round_open_in_new_24"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/sheet_content"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/sheet_content"
                 app:layout_constraintTop_toBottomOf="@+id/sheet_content"
-                app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@drawable/round_open_in_new_24" />
+                app:layout_constraintVertical_bias="0.0" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
