Implementación de botón compartir en bottomSheetDialog y mejoras de ciclo de vida de corrutina #34
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/layout/quake_bottom_sheet.xml
+++ b/app/src/main/res/layout/quake_bottom_sheet.xml
@@ -38,20 +38,33 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_open_details"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="32dp"
-                android:contentDescription="@string/cd_details_icon"
                 android:text="@string/details"
                 app:icon="@drawable/round_open_in_new_24"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/sheet_content"
                 app:layout_constraintTop_toBottomOf="@+id/sheet_content"
                 app:layout_constraintVertical_bias="0.0" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_share_quake"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="16dp"
+                android:text="@string/share"
+                app:icon="@drawable/ic_round_share_24"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_open_details"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/btn_open_details"
+                app:layout_constraintTop_toTopOf="@+id/btn_open_details" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
