--- a/app/src/main/res/layout/card_view_quake_bottom_sheet.xml
+++ b/app/src/main/res/layout/card_view_quake_bottom_sheet.xml
@@ -17,10 +17,10 @@
         android:id="@+id/iv_mag_color"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:contentDescription="@string/circulo_pintado"
+        android:contentDescription="@string/painted_circle"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent"
-        card_view:srcCompat="@drawable/circle_shape" />
+        card_view:srcCompat="@drawable/background_magnitude_circle_shape" />
 
     <TextView
         android:id="@+id/tv_magnitude"
@@ -81,14 +81,14 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="4dp"
-        android:contentDescription="@string/icono_sensible"
+        android:contentDescription="@string/sensitive_icon"
         android:visibility="invisible"
         card_view:layout_constraintBottom_toBottomOf="@+id/tv_city"
         card_view:layout_constraintEnd_toEndOf="parent"
         card_view:layout_constraintHorizontal_bias="0.0"
         card_view:layout_constraintStart_toEndOf="@+id/tv_city"
         card_view:layout_constraintTop_toTopOf="@+id/tv_city"
-        card_view:srcCompat="@drawable/ic_round_warning_24"
+        card_view:srcCompat="@drawable/round_warning_24"
         tools:visibility="visible" />
 
     <ImageView
@@ -96,7 +96,7 @@
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_marginStart="4dp"
-        android:contentDescription="Reference icon"
+        android:contentDescription="@string/reference_icon"
         card_view:layout_constraintBottom_toBottomOf="@+id/iv_date"
         card_view:layout_constraintStart_toEndOf="@+id/tv_date"
         card_view:layout_constraintTop_toTopOf="@+id/iv_date"
@@ -106,7 +106,7 @@
         android:id="@+id/iv_date"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:contentDescription="Hour icon"
+        android:contentDescription="@string/hour_icon"
         card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintStart_toStartOf="@+id/tv_city"
         card_view:layout_constraintTop_toBottomOf="@+id/tv_city"
