--- a/app/src/main/res/layout/quake_bottom_sheet.xml
+++ b/app/src/main/res/layout/quake_bottom_sheet.xml
@@ -59,7 +59,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
                 android:text="@string/share"
-                app:icon="@drawable/ic_round_share_24"
+                app:icon="@drawable/round_share_24"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_open_details"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
